<resources>
    <string name="so_no_title">SO No.</string>
    <string name="customer_name_title">Customer Name</string>
    <string name="customer_po_no_title">Customer PO No.</string>
    <string name="order_date_title">Tanggal system</string>
    <string name="project_code">Project Code</string>
    <string name="refresh_warning">Semua data akan dihapus anda yakin ingin mengupdate data?</string>
    <string name="part_no_hint">Part No.</string>
    <string name="nks_no_hint">NKS No.</string>
    <string name="description_hint">Description</string>
    <string name="sn_hint">SN</string>
    <string name="so_hint">SO</string>
    <string name="mac_address">Mac Address</string>
    <string name="pl_dor_hint">PL No</string>
    <string name="note_hint">NOTE</string>
    <string name="save_only">Save</string>
    <string name="save_and_new">Save &amp; New</string>
    <string name="multiple_item_warning">Harap Pilih Barang yang Ingin diInput</string>
    <string name="title_core">API Module</string>
    <string name="employee_title"><u>%1$s</u></string>
    <string name="company_name">PT. MASTERSYSTEM INFOTAMA</string>
    <string name="today_activity">Today Activity</string>
    <string name="back">Back</string>
    <string name="picklistno_title">Picking List: %1$s</string>
    <string name="receipthistory_title">History PO No : %1$s</string>
    <string name="pickingList_header_title">Picking List</string>
    <string name="receipt_local_header">Receipt Local</string>
    <string name="receipt_import_header">Receipt Import</string>
    <string name="entry_no_title">Entry No</string>
    <string name="scan_by_title">Scan By</string>
    <string name="part_no_title">Part No</string>
    <string name="qty_title">QTY</string>
    <string name="sn_title">SN</string>
    <string name="vendor_name_title">Vendor Name</string>
    <string name="detail_scan_already">%1$s/</string>
    <string name="acidently_scan">Accidentally-Scan: %1$d</string>
    <string name="expect_receipt_date_title">Expected Receipt Date</string>
    <string name="project_code_title">Project Code</string>
    <string name="po_title_header">PO: %1$s</string>
    <string name="packing_id_title">Packing ID</string>
    <string name="po_no_title">PO No</string>
    <string name="shipset_title">Shipset</string>
    <string name="tracking_id_title">Tracking ID</string>
    <string name="mac_address_title">Mac Address</string>
    <string name="item_no_title">Item No</string>
    <string name="description_title">Description</string>
    <string name="view_title">View</string>
    <string name="server_host_name">http://192.168.1.13:7048/BC180/OdataV4/Company("\'CRONUS Australia Pty. Ltd.\'")/</string>
    <string name="user_name">HAP-ACC</string>
    <string name="password">qwerty</string>
    <string name="domain">DESKTOP-U57JOGD\</string>
    <string name="employee_name">STEVEN</string>
    <string name="company_name_login">CRONUS Australia Pty. Ltd.</string>
    <string name="salesperson_text">Salesperson</string>
    <string name="qty_alreadyscan_qty_fromline_error_mssg">Success Update Transfer Data</string>
    <string name="logout_warning">Semua data akan dihapus anda yakin ingin Logout?</string>

    <string name="error_input_message">Wajib di isi</string>
    <string name="posted_status_true">Post Status :  True</string>
    <string name="posted_status_false">Post Status : False</string>
    <string name="success_save_data_local">Data Saved</string>
    <string name="stock_count">Stock Count</string>
    <string name="srial_no_hint">Serial No</string>
    <string name="post_data_title">Post</string>
    <string name="post_all_data_or_no_data">No data  %1$s/ All data posted already</string>
    <string name="error_nopart_not_found">Part No tidak ada data yang sesuai</string>
    <string name="error_qty_over_outstanding">Data yang diinput sudah melebihi batas yang tersedia</string>
    <string name="error_sn_on_same_pickinglistno">Nomor SN yang di input di Pickinglist ini sudah ada</string>
    <string name="error_po_no_not_same">Po No harus sama dengan yang di input</string>
    <string name="line_no_hint">Line No</string>
    <string name="search_hint">Description / Line No / Part No</string>
    <string name="search_title_toolbar">Search %1$s</string>
    <string name="clear_data_title">Clear Data</string>
    <string name="picklistno_history_title">History Picking List: %1$s</string>
    <string name="pickinglist_all_history">History All Picking List</string>
    <string name="import_and_local_all_history">History All Receipt</string>
    <string name="part_no_error_message">Barcode yang Anda Scan tidak di temukan Harap Scan Ulang</string>
    <string name="sn_no_already_inputed">No SN yang di masukan sudah ada</string>
    <string name="stock_count_post">Stock Opname Post Data</string>
    <string name="total_data_posted">Data Posted</string>
    <string name="total_data_need_posted">Total Data to Post</string>
    <string name="picking_list_post">Picking List Post Data</string>
    <string name="receipt_local_post">Transfer Receipt Post Data</string>
    <string name="receipt_import_post">Purchase Order Post Data</string>
    <string name="input_settings">Input Settings</string>
    <string name="valide_s_title">Validate S</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="continue_btn_text">Continue</string>
    <string name="manual_switch_text">Manual Input</string>
    <string name="automatic_switch_text">Automatic Input</string>
    <string name="sn_normal_scan">SN</string>
    <string name="sn_pn_scan">SN - PN</string>
    <string name="validation_k_sn">Cisco Validation</string>
    <string name="validation_k_sn_no">Normal Validation</string>
    <string name="validation_stock_count_k_message">Semua field harus di isi dan harus mengikuti Standard CISCO</string>
    <string name="validation_stock_count_message">Semua field harus di isi</string>
    <string name="picking_history_title">Picking History</string>
    <string name="receipt_import_history_title">Receipt Import History</string>
    <string name="receipt_local_history_title">Receipt Local History</string>
    <string name="shipment_not_match_error">Tracking ID harus sama dengan Shipment no</string>
    <string name="part_no_history">Part No: %1$s</string>
    <string name="refresh_and_logout_warning_unposted_data">%1$s data yang belum di Upload</string>

    <string name="transfer_store">Transfer Shipment</string>
    <string name="transfer_store_name">Store: %1$s</string>
    <string name="transfer_store_status">Status: %1$s</string>
    <string name="transfer_store_from">From: %1$s</string>
    <string name="transfer_store_to">To: %1$s</string>
    <string name="transfer_store_no">No: %1$s</string>
    <string name="transfer_shipment_history_title">Transfer Shipment History</string>
    <string name="transfer_receipt_title">Transfer Receipt</string>
    <string name="transfer_receipt_history_title">Transfer Receipt History</string>
    <string name="purchase_order_title">Purchase Order</string>
    <string name="purchase_order_history_title">Purchase Order History</string>
    <string name="stock_opname_title">Stock Opname</string>
    <string name="stock_opname_history_title">Stock Opname History</string>
    <string name="check_stock_title">Check Stock</string>
    <string name="stock_opname_search_title">Journal Template Name</string>
    <string name="stock_checking_title">Stock Checking</string>
    <string name="stock_checking_hint">Search</string>
    <string name="stock_checking_button_item_identifier">Search by Alias</string>
    <string name="stock_checking_button_item_no">Search by Item Look Up </string>
    <string name="bin_reclass_title">Bin Reclass</string>
    <string name="bin_reclass_input_title">Bin Reclass Input</string>
    <string name="bin_reclass_from_hint">Bin From</string>
    <string name="bin_reclass_to_hint">Bin To</string>
    <string name="bin_reclass_create_button">Create</string>
    <string name="bin_reclass_cancel_button">Cancel</string>
    <string name="bin_reclass_detail_from_code">Bin Code From: %1$s</string>
    <string name="bin_reclass_detail_to_code">Bin Code To: %1$s</string>
    <string name="bin_reclass_detail_date">Date: %1$s</string>
    <string name="bin_reclass_detail_user">User: %1$s</string>
    <string-array name="filter_bin_reclass">
        <item>Show All</item>
        <item>Show Posted Status = False</item>
        <item>Show Posted Status = True</item>
    </string-array>
    <string name="bin_reclass_posted">Bin Reclass Post Data</string>
    <string name="inventory_pick_title">Inventory Pick</string>
    <string name="inventory_pick_history">Inventory Pick History</string>
    <string name="stock_opname_qty_box_delete">Total QTY: %1$s</string>
    <string name="stock_opname_total_scanned">Total Scan: %1$s</string>
    <string name="stock_opname_box_delete_warning">Semua data berdasarkan box yang dicari akan dihapus, Apakah anda yakin?</string>
    <string name="bin_reclass_total_scan">Total Scan: %d</string>
    <string name="user_list_title">User List</string>
    <string name="user_list_empty">User list empty, please login to save user</string>
</resources>